
*****

Moved ads_token and ads_display loading into functions
to update them at runtime.
Removed unnecessary constants (url paths) from ads_manager.py

*****

Bumped bibmanager version to 0.6.0.
This next merge closes #12


*****  Sun Jan 13 14:06:24 CET 2019  *****

Caught case of empty input string in utils.cond_next() returning zero
(thought it's not expected to occur).

*****

Fixed bug in utils.parse_name() for input strings ending (starting)
with a comma.
Fixed missing f in f-string of len-fields exception.

*****

Tweaked utils.cond_split() to count matches at the beginning and end
of string, returning an empty substring for the edges (this is more
inline with the BibTeX name formatting).

*****

Modified utils.cond_split() to remove blanks around first/von/last/jr
and collapse blanks in between.

*****

Added test_utils.py testing file.

*****

Added requirements.txt and .travis.yml files to set up continuous
integration.

*****

Updated .travis.yml file.

*****

Updated README.md to include logo and build badge.
(Update with doi when ready).

*****

Modified lm.no_comments() to match comment line when the first line
in string begins with a comment.

*****

Tweaked lm.citations() to remove outer commas and remove blanks
more cleanly.


*****  Mon Jan 14 22:45:16 CET 2019  *****

Added test_latex_manager.py testing file.
(Still need tests for functions that need fixtures).

*****

Changed import format for utils, getting module rather than the
module's variables.  This fixes an issue with a monkeypatch testing
(constants were get from utils before runtime, .i.e., before monkey
patching).


*****  Tue Jan 15 23:32:15 CET 2019  *****

Added check at Bib.__init__() to count zero net braces.


*****  Thu Jan 17 00:20:11 CET 2019  *****

Tweaked bm.display_bibs(), cleaner trimming of ending newline.

*****

Added remove_duplicates() to bm.__all__.
Fixed bug, in bm.remove_duplicates() when there are no entries
without the field to check.

*****
